@@ -1,5 +1,10 @@
 2003-11-17  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/cmds.c (cm_settitle): do not automatically start bookinfo
+	element after settitle.
+
+2003-11-17  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/xml.c (xml_synindex): new function to keep track of index
 	redirections.
 	(xml_insert_indexterm): added a check to see if any index
